Add spell trigger condition `melee.is_combo`